[metadata]
name = yubundle
version = 0.0.2
author = Yudha Styawan
author_email = yudhastyawan@gmail.com
description = a package used personally by Yudha Styawan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yudhastyawan/yubundle
project_urls =
    Bug Tracker = https://github.com/yudhastyawan/yubundle/issues
    Documentation = http://yubundle.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src